Fixed bug with jumping zindex on header hidden

--- a/public/css/app/header.css
+++ b/public/css/app/header.css
@@ -38,14 +38,6 @@ button#btn_mobile.active {
     box-shadow:-1px -1px 0 rgba(160,160,160,0.9);
 }
 
-/* Header */
-
-section#header {
-    visibility:visible;
-    -webkit-transition:opacity 0.6s ease-in-out;
-    transition:        opacity 0.6s ease-in-out;
-}
-
 /* Nav */
 
 section#header nav {
@@ -54,6 +46,10 @@ section#header nav {
     width:100%;
     height:0;
     padding:40px 40px 0;
+    visibility:visible;
+    -webkit-transition:opacity 0.6s ease-in-out;
+    transition:        opacity 0.6s ease-in-out;
+
 }
 
 /* Main / Social */
@@ -92,7 +88,7 @@ ul#nav_main > li:last-of-type {margin-right:0;}
 ul#nav_main > li div.bar {
     position:absolute;
     bottom:0px;
-    left:0;
+    left:0px;
     background:rgb(242,239,223);
     width:100%;
     height:5px;
